--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -1,7 +1,7 @@
 .large-hero {
 	position: relative;
 	
-	.large-hero__text-content {
+	&__text-content {
 	position: absolute;
 	top: 50%;
 	transform: translateY(-50%);
@@ -9,17 +9,18 @@
 	width: 100%;
 	text-align: center;
 	}
-
-}
-
-.large-hero__title {
+	
+	&__title {
 	font-weight: 300;
 	color: #2f5572;
 	font-size: 4.8rem;
-}
+	}
 
-.large-hero__subtitle {
+	&__subtitle {
 	font-weight: 300;
 	color: #2f5572;
 	font-size: 2.9rem;
+	}
 }
+
+
