--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -13,8 +13,13 @@
 	&__title {
 	font-weight: 300;
 	color: $mainBlue;
-	font-size: 4.8rem;
 	margin: 0;
+	font-size: 1.1rem;
+	
+	@media(min-width: 530px){
+		/*if the width exceeds 530px screen size, then font-size will becom 4.8rem*/
+		font-size: 4.8rem;
+		}
 	}
 
 	&__subtitle {
