--- a/app/assets/styles/modules/_btn.css
+++ b/app/assets/styles/modules/_btn.css
@@ -12,7 +12,11 @@
 	}
 	
 	&--large {
-		font-size: 1.25rem;
+		/*default font-size will be 1rem*/
 		padding: 1.1rem 1.9rem;
+		
+		@mixin atSmall {
+			font-size: 1.25rem;
+		}
 	}
 }
