--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -3,4 +3,5 @@
 @import "base/_variables";
 @import "modules/_large-hero";
 @import "modules/_btn";
-@import "base/_mixins"
+@import "base/_mixins";
+@import "modules/_wrapper";
