--- a/app/assets/styles/modules/_wrapper.css
+++ b/app/assets/styles/modules/_wrapper.css
@@ -4,7 +4,7 @@
 	padding-left: 18px;
 	padding-right: 18px;
 	//background-color: green;
-	max-width: 1200px;
+	max-width: 1236px;
 	/*this will make the contents horizontally centered*/
 	margin-left: auto;
 	margin-right: auto;
@@ -22,5 +22,13 @@
 	.wrapper {
     	padding-left: 0;
     	padding-right: 0;
+	}
+	
+	&--b-margin {
+		margin-bottom: 1rem;
+		@mixin atMedium {
+			margin-bottom: 3.875rem;
+		}
+		
 	}
 }
