--- a/app/assets/styles/base/_global.css
+++ b/app/assets/styles/base/_global.css
@@ -12,3 +12,8 @@ img {
   /*This property is defined for all the CSS classes which includes _global.css*/
   box-sizing: border-box;
 }
+
+a {
+	/*color for all the links*/
+	color: $mainOrange;
+}
