--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -14,7 +14,15 @@
 		padding-right: 65px;
 	}
 	
+	&__b-margin-until-medium {
+    margin-bottom: 1rem;
+  }
+	
 	@mixin atMedium {
+		
+	&__b-margin-until-medium {
+      margin-bottom: 0;
+    }
 		
 	&__medium-4 {
 		float:left;
@@ -35,7 +43,6 @@
 		}
 	
 	}
-	
 	
 	&__justifyText {
 		text-align:justify;
