--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -1,6 +1,6 @@
 @import "normalize.css";
-@import "base/_global";
 @import "base/_variables";
+@import "base/_global";
 /*The sequence of import is very very important*/
 @import "base/_mixins";
 @import "modules/_large-hero";
@@ -9,3 +9,4 @@
 @import "modules/_page-section";
 @import "modules/_headline";
 @import "modules/_row";
+@import "modules/_generic-content-container";
