feature-section-finalization

--- a/app/assets/styles/modules/_generic-content-container.css
+++ b/app/assets/styles/modules/_generic-content-container.css
@@ -2,9 +2,9 @@
 	
 	p {
 		line-height: 1.65;
-		
-		/*margin between paragraphs - vertical, horizontal*/
-		margin: 1.8rem 0;
+		font-weight: 300;
+		/*margin between paragraphs - top right bottom left*/
+		margin: 0 0 1.8rem 0;
 		
 		@mixin atMedium {
 			font-size: 1.125rem;
