--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -14,6 +14,14 @@
 		padding-right: 65px;
 	}
 	
+	&--gutters--large {
+		margin-right: -100px;
+	}
+	
+	&--gutters--large > div {
+		padding-right: 100px;
+	}
+	
 	&__b-margin-until-medium {
     margin-bottom: 1rem;
   }
@@ -41,6 +49,11 @@
 	&__medium-8--smaller {
 		width: 63%;
 		}
+		
+	&__medium-6 {
+		float:left;
+		width:50%;
+	}
 	
 	}
 	
