--- a/app/assets/styles/modules/_page-section.css
+++ b/app/assets/styles/modules/_page-section.css
@@ -1,7 +1,7 @@
 /*This file will have the responsibility of adding top-padding and bottom-padding to the page*/
 .page-section {
 	padding: 1.2rem 0;
-	
+	//background-color: yellow;/*to see the yellow, comment 'background-color: #e0e6ef;'*/
 	@mixin atMedium {
 		padding: 4.5rem 0;
 	}
@@ -12,7 +12,20 @@
 	}
 	
 	&--testimonials {
-		background: url('/assets/images/testimonials-bg.jpg') top center no-repeat;
-		background-size: cover;
+		background-color: #e0e6ef;
+		
+		@mixin atMedium {
+			/*Download bg image only for medium screens onward, not for small screens*/
+			background: url('/assets/images/testimonials-bg.jpg') top center no-repeat;
+			background-size: cover;
+		}
+	}
+	
+	&--no-b-padding-until-medium {
+		padding-bottom: 0;
+		
+		@mixin atMedium {
+		padding: 4.5rem 0;
+	}
 	}
 }
