--- a/app/assets/styles/modules/_testimonial.css
+++ b/app/assets/styles/modules/_testimonial.css
@@ -1,8 +1,19 @@
 .testimonial {
 	
 	/*top right bottom left*/
-	padding: 0 1.8125rem 1px 1.8125rem;
+	padding: 0 18px 1px 18px;
 	background-color: rgba(255,255,255,.8);
+	//background-color: yellow;
+	margin-bottom: 98px;
+	
+	@mixin atMedium {
+		margin-bottom: 0;
+		padding: 0 1.8125rem 1px 1.8125rem;
+	}
+	
+	&--last{
+		margin-bottom: 0;
+	}
 	
 	&__photo {
 		//background-color: yellow;
