--- a/app/assets/styles/modules/_page-section.css
+++ b/app/assets/styles/modules/_page-section.css
@@ -14,7 +14,7 @@
 	&--testimonials {
 		background-color: #e0e6ef;
 		
-		@mixin atMedium {
+		@mixin atLarge {
 			/*Download bg image only for medium screens onward, not for small screens*/
 			background: url('/assets/images/testimonials-bg.jpg') top center no-repeat;
 			background-size: cover;
@@ -26,6 +26,14 @@
 		
 		@mixin atMedium {
 		padding: 4.5rem 0;
+		}
 	}
+	
+	&--no-b-padding-until-large {
+		padding-bottom: 0;
+		
+		@mixin atLarge {
+		padding: 4.5rem 0;
+		}
 	}
 }
