--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -66,6 +66,38 @@
 	
 	}
 	
+	@mixin atLarge {
+		
+	&__b-margin-until-large {
+      margin-bottom: 0;
+    }
+		
+	&__large-4 {
+		float:left;
+		width: 33.33%;
+		}
+	
+	&__large-4--larger {
+		width: 37%;
+		}
+		
+	&__large-8 {
+		float: left;
+		width: 66.66%;
+		}
+	
+	&__large-8--smaller {
+		width: 63%;
+		}
+		
+	&__large-6 {
+		float:left;
+		width:50%;
+	}
+	
+	}
+	
+	
 	&__justifyText {
 		text-align:justify;
 	}
@@ -77,6 +109,20 @@
 	&--equal-height-at-medium {
 		
 		@mixin atMedium {
+			//background-color: yellow;
+			/*using flexbox for equal height of testimonials*/
+			display: flex;
+		}
+		
+		& > div {
+			float: none;
+			display: flex;
+		}
+	}
+	
+	&--equal-height-at-large {
+		
+		@mixin atLarge {
 			//background-color: yellow;
 			/*using flexbox for equal height of testimonials*/
 			display: flex;
