--- a/app/assets/styles/modules/_testimonial.css
+++ b/app/assets/styles/modules/_testimonial.css
@@ -6,7 +6,7 @@
 	//background-color: yellow;
 	margin-bottom: 98px;
 	
-	@mixin atMedium {
+	@mixin atLarge {
 		margin-bottom: 0;
 		padding: 0 1.8125rem 1px 1.8125rem;
 	}
