--- a/app/assets/styles/modules/_primary-nav.css
+++ b/app/assets/styles/modules/_primary-nav.css
@@ -1,4 +1,8 @@
 .primary-nav {
+    padding-top: 10px;
+    @mixin atMedium{
+        padding-top: 0;
+    }
     
     &--pull-right{
         @mixin atMedium {
@@ -35,6 +39,13 @@
         text-decoration: none;
         font-weight: 300;
         display: block;
-        padding: 12px 0;
+        padding: 5px 8px;
+        font-size: .8rem;
+        background-color: rgba($mainBlue, .5);
+        
+        @mixin atMedium {
+            padding: 12px 0;
+            background-color: transparent;
+        }
     }
 }
