--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -3,6 +3,10 @@
     position: absolute;
     width: 100%;
     z-index: 2;
+    transition: background-color .3s ease-out;
+    &--is-expanded {
+        background-color: rgba($mainBlue, .55);
+    }
     
     @mixin atMedium {
         background-color: rgba($mainBlue, .3);
@@ -34,15 +38,28 @@
     }
     
     &__menu-content {
-        display: none;
-        padding-top: 100px;
+        opacity: 0;
+        transform: scale(1.2);
+        transition: all .3s ease-out;
+        z-index: -10;
+        position: relative;
+        padding-top: 90px;
         text-align: center;
         @mixin atMedium {
             display: block;
         }
         
+        @mixin atMedium {
+            opacity: 1;
+            z-index: 1;
+            padding-top: 0;
+            transform: scale(1);
+        }
+        
         &--is-visible {
-            display: block;
+            opacity: 1;
+            z-index: 1;
+            transform: scale(1);
         }
     }
     
@@ -51,6 +68,7 @@
         height: 20px;
         background-color: white;
         position: absolute;
+        z-index: 10;
         top: 10px;
         right: 10px;
         
